<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern_3"
    tools:context=".TrainerReminderActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="114dp"
        android:text="@string/trainerReminderTitle"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spnChooseClientReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnChooseClientReminder"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:background="@drawable/rounded_input_field"
        android:entries="@array/spnChooseClientRemind"
        app:layout_constraintBottom_toTopOf="@+id/etEnterMessageTrainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/etEnterMessageTrainer"
        android:layout_width="253dp"
        android:layout_height="0dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/rounded_input_field"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingRight="5dp"
        android:text="@string/etEnterMessageTrainer"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnSendReminderTrainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnChooseClientReminder" />

    <Button
        android:id="@+id/btnSendReminderTrainer"
        android:layout_width="197dp"
        android:layout_height="0dp"
        android:layout_marginBottom="208dp"
        android:text="@string/btnSendReminder"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackToMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEnterMessageTrainer" />

    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="152dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:text="@string/btnBackToMainAssign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSendReminderTrainer" />
</androidx.constraintlayout.widget.ConstraintLayout>